[package]
name = "abl2esp"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
#uefi = { version = "0.33.0", features = ["alloc", "global_allocator", "logger", "panic_handler"] }
uefi = { version = "0.34.1", features = ["alloc", "global_allocator", "logger", "panic_handler"] }

[patch.crates-io]
#uefi = { path = "../uefi-rs/uefi" }
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git" }
uefi-macros = { git = "https://github.com/rust-osdev/uefi-rs.git" }
uefi-raw = { git = "https://github.com/rust-osdev/uefi-rs.git" }
